--- a/app/index.html
+++ b/app/index.html
@@ -1,58 +1,183 @@
 ---
-title: Boostrap Index
+title: Exhibinection - Home
 layout: ./app/layout.ejs
 engine: ejs
 current: index
 ---
 
-<div class="container">
-  <h1 class="index__h1">這是一段話</h1>
-  <div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
-  </div>
-  <div class="alert alert-secondary" role="alert">
-    A simple secondary alert—check it out!
-  </div>
-  <div class="alert alert-success" role="alert">
-    A simple success alert—check it out!
-  </div>
-  <div class="alert alert-danger" role="alert">
-    A simple danger alert—check it out!
-  </div>
-  <div class="alert alert-warning" role="alert">
-    A simple warning alert—check it out!
-  </div>
-  <div class="alert alert-info" role="alert">
-    A simple info alert—check it out!
-  </div>
-  <div class="alert alert-light" role="alert">
-    A simple light alert—check it out!
-  </div>
-  <div class="alert alert-dark" role="alert">
-    A simple dark alert—check it out!
-  </div>
-</div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<!-- banner -->
+<div class="banner">
+  <div class="container d-flex">
+    <div class="banner-title text-white">
+      <h2 class="h2 mb-2">台北當代藝術展</h2>
+      <p class="mb-4">01 JUN - 31 OCT</p>
+      <div class="banner-btn">
+        <button type="button" class="btn btn-accent">購買票券</button>
+        <button type="button" class="btn btn-outline-white">詳細資訊</button>
       </div>
     </div>
   </div>
 </div>
+<!-- nav -->
+<nav class="nav-box border border-secondary mb-5 mb-md-10 mb-lg-15">
+  <div class="container">
+    <ul class="nav-main list-unstyled mx-auto text-center d-flex">
+      <li><a class="nav-main-link" href="#">音樂</a></li>
+      <li><a class="nav-main-link" href="#">戲劇</a></li>
+      <li><a class="nav-main-link" href="#">設計</a></li>
+      <li><a class="nav-main-link" href="#">藝術</a></li>
+      <li><a class="nav-main-link" href="#">美食</a></li>
+      <li><a class="nav-main-link" href="#">旅遊</a></li>
+      <li><a class="nav-main-link" href="#">電影</a></li>
+      <li><a class="nav-main-link" href="#">親子</a></li>
+      <li><a class="nav-main-link" href="#">期間限定</a></li>
+    </ul>
+  </div> 
+</nav>
+<!-- popular -->
+<section class="popular mb-5 mb-md-10 mb-lg-15">
+  <div class="container">
+    <h2 class="mb-2 mb-md-6">熱門特展</h2>
+    <ul class="popular-list list-unstyled text-black">
+      <li class="d-flex bg-secondary-light mb-4 mb-md-5">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="popular-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="2020 台味設計展展覽照片">
+          </div>
+          <div class="popular-info col-md-7 d-flex">
+            <div class="popular-info-txt">
+              <div class="popular-title mb-1">
+                <h4>2020 台味設計展
+                  <a href="#" title="2020 台味設計展FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+                </h4>
+                <span class="popular-mark">01 JUN — 31 OCT</span>               
+              </div>  
+              <p class="popular-price mb-2">$350</p>
+              <p class="popular-detail">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>                  
+            </div>
+            <div class="popular-btn">
+              <button type="button" class="btn btn-primary px-4 me-2">購買票券</button>
+              <button type="button" class="btn btn-outline-primary px-4">收藏展覽</button>
+            </div>
+          </div>
+          <div class="popular-md-mark col-md-1 py-10 d-flex flex-column justify-content-between">
+            <span>01<br> JUN<br> |<br> 31<br> OCT</span>
+            <a href="#" title="2020 台味設計展FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+          </div>
+        </div>         
+      </li>
+      <li class="d-flex bg-secondary-light mb-4 mb-md-5">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="popular-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="No.22 線上設計展展覽照片">
+          </div>
+          <div class="popular-info col-md-7 d-flex">
+            <div class="popular-info-txt">
+              <div class="popular-title mb-1">
+                <h4>No.22 線上設計展
+                  <a href="#" title="No.22 線上設計展FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+                </h4>
+                <span class="popular-mark">01 JUN — 31 OCT</span>  
+              </div>
+              <p class="popular-price mb-2">$350</p>
+              <p class="popular-detail">這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>  
+            </div>
+            <div class="popular-btn">
+              <button type="button" class="btn btn-primary px-4 me-2">購買票券</button>
+              <button type="button" class="btn btn-outline-primary px-4">收藏展覽</button>
+            </div>
+          </div>
+          <div class="popular-md-mark col-md-1 py-10 d-flex flex-column justify-content-between">
+            <span>01<br> JUN<br> |<br> 31<br> OCT</span>
+            <a href="#" title="No.22 線上設計展FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+          </div>
+        </div>       
+      </li>
+      <li class="d-flex bg-secondary-light mb-4 mb-md-5">
+        <div class="row">
+          <div class="col-md-4">
+            <img  class="popular-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="高雄設計節展覽照片">
+          </div>
+          <div class="popular-info col-md-7 d-flex">
+            <div class="popular-info-txt">
+              <div class="popular-title">
+                <h4>高雄設計節
+                  <a href="#" title="高雄設計節FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+                </h4>         
+                <span class="popular-mark">01 JUN — 31 OCT</span>                 
+              </div>  
+              <p class="popular-price">$350</p>
+              <p class="popular-detail">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>  
+            </div>
+            <div class="popular-btn">
+              <button type="button" class="btn btn-primary px-4 me-2">購買票券</button>
+              <button type="button" class="btn btn-outline-primary px-4">收藏展覽</button>
+            </div>
+          </div>
+          <div class="popular-md-mark col-md-1 py-10 d-flex flex-column justify-content-between">
+            <span>01<br> JUN<br> |<br> 31<br> OCT</span>
+            <a href="#" title="高雄設計節FB"><img src="/assets/images/facebook logo_icon.svg" alt=""></a>
+          </div>
+        </div>       
+      </li>
+    </ul>
+  </div>
+</section>
+<!-- live -->
+<section class="live mb-5 mb-md-10 mb-lg-15">
+  <div class="container">
+    <h2 class="mb-2 mb-md-6">直播回顧</h2>
+    <div class="live-info text-white">
+      <div class="row">
+        <div class="live-bg-cover col-md-6 col-lg-4 px-6 py-10">
+          <h3 class="mb-8"><span class="fw-bold me-6">開幕對談</span>藝術展演巡禮</h3>
+          <img class="mb-3" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/people.png" alt="臺北現代聯合總監Ken Hsu">
+          <h4 class="mb-2">臺北現代聯合總監｜Ken Hsu</h4>
+          <p class="text-secondary-light mb-4">獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。</p>
+          <button class="btn btn-accent">點此觀看</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- swiper -->
+<section class="swiper mb-5 mb-md-10 mb-lg-15">
+  <div class="container">
+    <h2 class="mb-2 mb-md-6">猜你也喜歡...</h2>
+    <div class="row">
+      <div class="col-12 col-md-11 offset-md-1">
+        <div class="swiper-container mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+             <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1492087368735-957f2d176504?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=960&q=80" class="card-img-top" alt="NO22.線上設計展">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+             </div>  
+            </div>
+            <div class="swiper-slide">
+             <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1567722681579-c671cabd2810?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80" class="card-img-top" alt="NO22.線上設計展">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+             </div>  
+            </div>
+            <div class="swiper-slide">
+             <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1578402025217-920675beb3c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1065&q=80" class="card-img-top" alt="NO22.線上設計展">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+             </div>  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </div>
+</section>
+
