detail page modal update

--- a/app/detail.html
+++ b/app/detail.html
@@ -5,6 +5,105 @@ engine: ejs
 current: index
 ---
 
+<!-- Cart-list Modal -->
+<div class="modal right fade modal-dialog modal-dialog-scrollable" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content text-white">
+            <div class="modal-header pb-3">
+                <h5 class="modal-title fw-bold" id="staticBackdropLabel">Cart List</h5>           
+            </div>
+            <div class="modal-body pt-0">
+                <div class="card card-in-modal text-black">
+                    <div class="card-close">
+                        <button type="button" class="btn-close"></button>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-5 col-md-4">
+                            <img class="card-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="2020 台味設計展">
+                        </div>
+                        <div class="col-7 col-md-8">
+                            <div class="card-body d-flex justify-content-between align-items-center py-0">
+                                <div class="card-body-start">
+                                    <h6 class="card-title fw-bold mb-1">2020 台味設計展</h6>
+                                    <p class="card-text mb-1">01 JUN — 31 OCT</p>
+                                    <p class="card-text text-secondary-dark">全票</p>
+                                    <p class="card-text-display fw-bold">NT350</p>    
+                                </div>
+                                <div class="card-body-end d-flex">
+                                    <span class="material-icons">remove</span>
+                                    <span class="card-text-display fw-bold px-3">01</span> 
+                                    <span class="material-icons">add</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-in-modal text-black">
+                    <div class="card-close">
+                        <button type="button" class="btn-close"></button>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-5 col-md-4">
+                            <img class="card-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="2020 台味設計展">
+                        </div>
+                        <div class="col-7 col-md-8">
+                            <div class="card-body d-flex justify-content-between align-items-center py-0">
+                                <div class="card-body-start">
+                                    <h6 class="card-title fw-bold mb-1">2020 台味設計展</h6>
+                                    <p class="card-text mb-1">01 JUN — 31 OCT</p>
+                                    <p class="card-text text-secondary-dark">全票</p>
+                                    <p class="card-text-display fw-bold">NT350</p>    
+                                </div>
+                                <div class="card-body-end d-flex">
+                                    <span class="material-icons">remove</span>
+                                    <span class="card-text-display fw-bold px-3">01</span> 
+                                    <span class="material-icons">add</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-in-modal text-black">
+                    <div class="card-close">
+                        <button type="button" class="btn-close"></button>
+                    </div>
+                    <div class="row g-0">
+                        <div class="col-5 col-md-4">
+                            <img class="card-img" src="https://hexschool.github.io/webLayoutTraining1st/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="2020 台味設計展">
+                        </div>
+                        <div class="col-7 col-md-8">
+                            <div class="card-body d-flex justify-content-between align-items-center py-0">
+                                <div class="card-body-start">
+                                    <h6 class="card-title fw-bold mb-1">2020 台味設計展</h6>
+                                    <p class="card-text mb-1">01 JUN — 31 OCT</p>
+                                    <p class="card-text text-secondary-dark">全票</p>
+                                    <p class="card-text-display fw-bold">NT350</p>    
+                                </div>
+                                <div class="card-body-end d-flex">
+                                    <span class="material-icons">remove</span>
+                                    <span class="card-text-display fw-bold px-3">01</span> 
+                                    <span class="material-icons">add</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-between">
+                <div class="modal-footer-content">
+                    <span class="me-6">小計</span>
+                    <span>NT$1050</span>
+                </div>
+                <div class="modal-footer-btn d-flex">
+                    <button type="button" class="btn btn-outline-white me-2" data-bs-dismiss="modal" aria-label="Close">繼續購票</button>
+                    <button type="button" class="btn btn-outline-primary text-primary bg-white">前往結帳</button>    
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
+
 <main class="detail">
 <!-- ticket -->
     <section class="ticket mb-10">
