checkout pages update

--- a/app/detail.html
+++ b/app/detail.html
@@ -2,7 +2,7 @@
 title: Exhibinection - Detail
 layout: ./app/layout-content.ejs
 engine: ejs
-current: index
+current: detail
 ---
 
 <!-- Cart-list Modal -->
